# tiBackup

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  deploy_release.sh  deploy_release_qt5.sh  diskmain.cpp  diskmain.h  diskobserver.cpp  diskobserver.h  diskwatcher.cpp  diskwatcher.h  global.cpp  global.h  httprequestmapper.cpp  httprequestmapper.h  httpserve.cpp  httpserve.h  logging.cpp  logging.h  main.cpp  run_release.sh  tiBackup.pro
.github/workflows/: build.yml  deb.yml
QtWebApp/templateengine/: template.cpp  template.h  templateloader.cpp  templateloader.h
debian/: changelog  control  postinst  rules  tibackup.postinst  tibackup.tibackupd.service
etc/: tibackup_http.ini
etc/logrotate.d/: tibackup
etc/sudoers.d/: tibackup-scripts
etc/tmpfiles.d/: tibackup.conf
httpctrl/: indexctrl.cpp  indexctrl.h
init.d/: tibackup
lib/: devicedisk.cpp  devicedisk.h
scripts/: gen-web-cert.sh
systemd/: tibackupd.service
test/: e2e-pbs-packaging.sh  e2e-pbs-tls.py  e2e-prio2.py  mock-pbs.py  run-e2e-daemon.sh
test/flows/: flows-test.py  incontainer.sh  run.sh
test/pbs/: Dockerfile  entrypoint.sh  run.sh
test/pbs4/: Dockerfile  run.sh
test/prio3/: api-test.py  incontainer.sh  run.sh
test/pve-tools/: Dockerfile  run.sh
test/script-defang/: api-test.py  incontainer.sh  run.sh
test/ssh-target/: Dockerfile  entrypoint.sh  run.sh
tests/: tst_prio1.cpp
var/: tibackup_http.ini
var/www/: index.html
var/www/css/: app.css  fonts.css
var/www/js/: api.js  app.js  ws.js
var/www/templates/: backuplog.tpl  index.tpl
webserver/: apirouter.cpp  apirouter.h  jsonmap.cpp  jsonmap.h  webserver.cpp  webserver.h  wshub.cpp  wshub.h
webserver/auth/: passwordhash.cpp  passwordhash.h  sessionstore.cpp  sessionstore.h
